--- a/css/colcount.less
+++ b/css/colcount.less
@@ -130,6 +130,12 @@ header {
 		top: -35px;
 		background: url(http://rayhyde.nl/playground/img/playground.png) no-repeat 0 0;
 	}
+	a {
+		color: #fff;
+		&:hover {
+			text-decoration: none;
+		}
+	}
 }
 
 form {
